Fix footer visibility issue on small screen size.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -34,5 +34,4 @@ body {
     @include wrapper();
 
     flex: auto;
-    padding-bottom: 100px;
 }
